fix spacing in prose

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -9,13 +9,13 @@
 		@apply !mt-[--prose-spacing,theme(spacing.6)];
 	}
 
-	> * + :is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper),
-	> :is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper + script) + * {
+	> :where(* + :is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper)),
+	> :where(:is(figure, pre, astro-embed-tweet, .codepen, .cp_embed_wrapper + script) + *) {
 		@apply [--lh:calc(theme(lineHeight.normal)*1rem)] [--half-leading:calc((var(--lh)-1rem)/2)] [--prose-spacing:calc(theme(spacing.6)+var(--half-leading))];
 	}
 
-	> * + :is(h2, h3, hr),
-	> hr + * {
+	> :where(* + :is(h2, h3, hr)),
+	> :where(hr + *) {
 		@apply [--prose-spacing:theme(spacing.12)];
 	}
 
